--- a/styles/style.css
+++ b/styles/style.css
@@ -4,19 +4,23 @@
 /*common style*/
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #F3F1FF;
+    background-color: #E5E5E5;
 }
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 hr {
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 /*top players style*/
 .top-players {
@@ -44,4 +48,108 @@ hr {
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+/*Top blogs style*/
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog {
+    display: flex;
+}
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+.blog-info {
+    margin-left: 16px;
+}
+.blog-info .blog-title {
+    font-size: 20px;
+}
+.blog-author {
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+/*Courses style*/
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course {
+    background-color: #FFFFFF;
+    padding: 13px 17px 27px 11px;
+    box-shadow: 0px 252px 15px rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+}
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+.course-title {
+    font-size: 20px;
+    color: #1E1E1E;
+}
+.course-author {
+    color: #ED6B4F;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star {
+    font-size: 12px;
+}
+.fa-star.filled {
+    color: #FFC014;
+}
+.fa-star.empty {
+    color: #AEAEAE;
+}
+.course-info span{
+    font-size: 15px;
+    color: #A2A2A2;
+}
+.course-duration{
+    background-color: #FFE4E8;
+    border-radius: 15px;
+    color: #FF4A60;
+}
+/*-----------------
+    Media Queries
+--------------------*/
+/*Mobile device*/
+@media only screen  and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+    .players , .blogs, .courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player,.blog{
+        flex-direction: column;
+    }
+}
+/*Tablet device*/
+@media only screen  and (min-width:688px) and (max-width:992px){
+    .container {
+        width: 100%;
+    }
+    .players , .courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blogs {
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player,.blog{
+        flex-direction: column;
+    }
 }
